--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: #2D3142;
     font-family: 'Roboto', sans-serif;
+        overflow: hidden;
 }
 .nav-toggle {
     font-size: 50px;
